Main menu: Fix collapse/expand for "Show all" and multilevel
Multilevel topic segments work with the "Show all" mechanism now.
Collapse and expansion of the two - if nested - now work as expected,
hiding the correct elements.

CMK-23671

--- a/packages/cmk-frontend/src/themes/facelift/scss/_mega_menu.scss
+++ b/packages/cmk-frontend/src/themes/facelift/scss/_mega_menu.scss
@@ -296,7 +296,7 @@
               margin: 3px 0 0; /* No spacing if icons per entry are used */
             }
 
-            a.show_all_topics,
+            a.collapse_topic,
             div.spacer {
               img {
                 display: none;
@@ -416,7 +416,7 @@
                 margin-left: 0;
               }
 
-              a.show_all_topics img {
+              a.collapse_topic img {
                 display: block;
               }
             }
